--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
                 }
               ]
             }
-          event: fail
+          event: always
 
   build-backend:
     <<: *defaults
@@ -109,7 +109,7 @@ jobs:
                 }
               ]
             }
-          event: fail
+          event: always
 
   test-frontend:
     <<: *defaults
@@ -140,7 +140,7 @@ jobs:
                 }
               ]
             }
-          event: fail
+          event: always
                 
   test-backend:
     <<: *defaults
@@ -171,7 +171,7 @@ jobs:
                 }
               ]
             }
-          event: fail
+          event: always
             
   scan-frontend:
     <<: *defaults
