--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,21 +60,8 @@ jobs:
           key: frontend-build
       - slack/notify:
           channel: '#general'
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "❌ *Failure* #${CIRCLE_BUILD_NUM} `${CIRCLE_PROJECT_REPONAME}` on `${CIRCLE_BRANCH}`. Link `${CIRCLE_BUILD_URL}`"
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
+          event: fail
+          template: basic_fail_1
 
   build-backend:
     <<: *defaults
@@ -93,21 +80,8 @@ jobs:
           key: backend-build
       - slack/notify:
           channel: '#general'
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "❌ *Failure* #${CIRCLE_BUILD_NUM} `${CIRCLE_PROJECT_REPONAME}` on `${CIRCLE_BRANCH}`. Link `${CIRCLE_BUILD_URL}`"
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
+          event: fail
+          template: basic_fail_1
 
   test-frontend:
     <<: *defaults
@@ -123,21 +97,8 @@ jobs:
             npm test
       - slack/notify:
           channel: '#general'
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "❌ *Failure* #${CIRCLE_BUILD_NUM} `${CIRCLE_PROJECT_REPONAME}` on `${CIRCLE_BRANCH}`. Link `${CIRCLE_BUILD_URL}`"
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
+          event: fail
+          template: basic_fail_1
                 
   test-backend:
     <<: *defaults
@@ -153,21 +114,8 @@ jobs:
             npm test
       - slack/notify:
           channel: '#general'
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "mrkdwn",
-                      "text": "❌ *Failure* #${CIRCLE_BUILD_NUM} `${CIRCLE_PROJECT_REPONAME}` on `${CIRCLE_BRANCH}`. Link `${CIRCLE_BUILD_URL}`"
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
+          event: fail
+          template: basic_fail_1
             
   scan-frontend:
     <<: *defaults
@@ -466,8 +414,10 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
+      - build-frontend:
+          context: slack-secrets
+      - build-backend:
+          context: slack-secrets
       - test-frontend:
           context: slack-secrets
           requires: [build-frontend]
