--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -437,21 +437,49 @@ workflows:
       - configure-infrastructure:
           context: env_vars
           requires: [deploy-infrastructure]
+          filters:
+            branches:
+              only:
+                - master
       - run-migrations:
           context: env_vars
           requires: [configure-infrastructure]
+          filters:
+            branches:
+              only:
+                - master
       - deploy-frontend:
           context: env_vars
           requires: [run-migrations]
+          filters:
+            branches:
+              only:
+                - master
       - deploy-backend:
           context: env_vars
           requires: [run-migrations]
+          filters:
+            branches:
+              only:
+                - master
       - smoke-test:
           context: env_vars
           requires: [deploy-backend, deploy-frontend]
+          filters:
+            branches:
+              only:
+                - master
       - cloudfront-update:
           context: env_vars
           requires: [smoke-test]
+          filters:
+            branches:
+              only:
+                - master
       - cleanup:
           context: env_vars
           requires: [cloudfront-update]
+          filters:
+            branches:
+              only:
+                - master
