--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,7 +257,7 @@ jobs:
               --output text)
             echo "${BACKEND_IP}"
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}" >> "frontend/.env"
+            echo "API_URL=$API_URL" > frontend/.env
       - run:
           name: Deploy frontend objects
           command: |
